force-app/main/default/objects/Meeting_Participant__c/fields/CheckCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>CheckCurrentUser__c</fullName>
    <formula>Participant__r.Id =  $User.ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CheckCurrentUser</label>
    <type>Checkbox</type>
</CustomField>