force-app/main/default/objects/Meeting_Participant__c/fields/Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Interviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the participant an interviewer?</description>
    <label>Interviewer?</label>
    <type>Checkbox</type>
</CustomField>