force-app/main/default/objects/Meeting_Participant__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <label>Participant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meeting Participants</relationshipLabel>
    <relationshipName>Meeting_Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>