force-app/main/default/objects/Meeting_Participant__c/fields/Scheduled_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Meeting_Date__c</fullName>
    <formula>Meeting__r.Scheduled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Meeting Date</label>
    <type>DateTime</type>
</CustomField>